@@ -1,5 +1,12 @@
 2012-09-25  Dan Bernstein  <mitz@apple.com>
 
+        Try to fix non-Mac builds.
+
+        * WebProcess/WebPage/WebPage.cpp:
+        (WebKit::WebPage::updatePreferences):
+
+2012-09-25  Dan Bernstein  <mitz@apple.com>
+
         WebKit2 part of <rdar://problem/11455228> [mac] Stop using screen fonts
         https://bugs.webkit.org/show_bug.cgi?id=97620
 
